main-page responsive

--- a/src/Layout/DashboardLayout/dashboard.css
+++ b/src/Layout/DashboardLayout/dashboard.css
@@ -64,3 +64,9 @@
     margin-bottom: 2em;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .layout-container {
+    padding: 1em 1.5em;
+  }
+}
